--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 </head>
 
 <body>
-    <div>
+    <nav>
         <!-- navigation bar -->
-    </div>
-    <div>
+    </nav>
+    <section>
         <!-- hero content -->
         <h1>Bloc Jams</h1>
         <h3>Turn the music up!</h3>
-    </div>
-    <div>
+    </section>
+    <section>
         <div>
             <h5>Choose your music</h5>
             <p>The world is full of music; why should you have to listen to music that someone else chose?</p>
@@ -27,7 +27,7 @@
             <h5>Mobile enabled</h5>
             <p>Listen to your music on the go. This streaming service is available on all mobile platforms.</p>
         </div>
-    </div>
+    </section>
 
 </body>
 
