--- a/collection.html
+++ b/collection.html
@@ -11,7 +11,60 @@
     <link rel="stylesheet" type="text/css" href="styles/collection.css">
 </head>
 
-<body>
+<body class="collection">
+    <nav class="navbar">
+        <a href="index.html" class="logo">
+            <img src="assets/images/bloc_jams_logo.png" alt="bloc jams logo">
+        </a>
+        <div class="links-container">
+            <a href="collection.html" class="navbar-link">collection</a>
+        </div>
+
+    </nav>
+
+    <secton class="album-covers container clearfix">
+        <div class="collection-album-container column fourth">
+            <img src="assets/images/album_covers/01.png" alt="album 01">
+            <div class="collection-album-info caption">
+                <p>
+                    <a href="#" class="album-name">The Colors</a>
+                    <br/> X songs
+                    <br/>
+                </p>
+            </div>
+        </div>
+        <div class="collection-album-container column fourth">
+            <img src="assets/images/album_covers/01.png" alt="album 01">
+            <div class="collection-album-info caption">
+                <p>
+                    <a href="#" class="album-name">The Colors</a>
+                    <br/> X songs
+                    <br/>
+                </p>
+            </div>
+        </div>
+        <div class="collection-album-container column fourth">
+            <img src="assets/images/album_covers/01.png" alt="album 01">
+            <div class="collection-album-info caption">
+                <p>
+                    <a href="#" class="album-name">The Colors</a>
+                    <br/> X songs
+                    <br/>
+                </p>
+            </div>
+        </div>
+        <div class="collection-album-container column fourth">
+            <img src="assets/images/album_covers/01.png" alt="album 01">
+            <div class="collection-album-info caption">
+                <p>
+                    <a href="#" class="album-name">The Colors</a>
+                    <br/> X songs
+                    <br/>
+                </p>
+            </div>
+        </div>
+
+    </secton>
 
 </body>
 
