--- a/collection.html
+++ b/collection.html
@@ -22,49 +22,58 @@
 
     </nav>
 
-    <secton class="album-covers container clearfix">
+    <section class="album-covers container clearfix">
         <div class="collection-album-container column fourth">
-            <img src="assets/images/album_covers/01.png" alt="album 01">
+            <img src="assets/images/album_covers/01.png" />
             <div class="collection-album-info caption">
                 <p>
-                    <a href="#" class="album-name">The Colors</a>
-                    <br/> X songs
+                    <a class="album-name" href="album.html">The Colors</a>
                     <br/>
-                </p>
-            </div>
-        </div>
-        <div class="collection-album-container column fourth">
-            <img src="assets/images/album_covers/01.png" alt="album 01">
-            <div class="collection-album-info caption">
-                <p>
-                    <a href="#" class="album-name">The Colors</a>
-                    <br/> X songs
-                    <br/>
-                </p>
-            </div>
-        </div>
-        <div class="collection-album-container column fourth">
-            <img src="assets/images/album_covers/01.png" alt="album 01">
-            <div class="collection-album-info caption">
-                <p>
-                    <a href="#" class="album-name">The Colors</a>
-                    <br/> X songs
-                    <br/>
-                </p>
-            </div>
-        </div>
-        <div class="collection-album-container column fourth">
-            <img src="assets/images/album_covers/01.png" alt="album 01">
-            <div class="collection-album-info caption">
-                <p>
-                    <a href="#" class="album-name">The Colors</a>
+                    <a href="album.html">Pablo Picasso</a>
                     <br/> X songs
                     <br/>
                 </p>
             </div>
         </div>
 
-    </secton>
+        <div class="collection-album-container column fourth">
+            <img src="assets/images/album_covers/01.png" alt="album 01">
+            <div class="collection-album-info caption">
+                <p>
+                    <a class="album-name" href="album.html">The Colors</a>
+                    <br/>
+                    <a href="index.html">Pablo Picasso</a>
+                    <br/> X songs
+                    <br/>
+                </p>
+            </div>
+        </div>
+        <div class="collection-album-container column fourth">
+            <img src="assets/images/album_covers/01.png" alt="album 01">
+            <div class="collection-album-info caption">
+                <p>
+                    <a href="album.html" class="album-name">The Colors</a>
+                    <br/>
+                    <a href="album.html">Pablo Picasso</a>
+                    <br/> X songs
+                    <br/>
+                </p>
+            </div>
+        </div>
+        <div class="collection-album-container column fourth">
+            <img src="assets/images/album_covers/01.png" alt="album 01">
+            <div class="collection-album-info caption">
+                <p>
+                    <a href="album.html" class="album-name">The Colors</a>
+                    <br/>
+                    <a href="album.html">Pablo Picasso</a>
+                    <br> X songs
+                    <br/>
+                </p>
+            </div>
+        </div>
+
+    </section>
 
 </body>
 
