--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         </div>
     </section>
 
+    <script src="scripts/utilities.js"></script>
     <script src="scripts/landing.js"></script>
 
 </body>
