--- a/collection.html
+++ b/collection.html
@@ -23,57 +23,11 @@
     </nav>
 
     <section class="album-covers container clearfix">
-        <div class="collection-album-container column fourth">
-            <img src="assets/images/album_covers/01.png" />
-            <div class="collection-album-info caption">
-                <p>
-                    <a class="album-name" href="album.html">The Colors</a>
-                    <br/>
-                    <a href="album.html">Pablo Picasso</a>
-                    <br/> X songs
-                    <br/>
-                </p>
-            </div>
-        </div>
-
-        <div class="collection-album-container column fourth">
-            <img src="assets/images/album_covers/01.png" alt="album 01">
-            <div class="collection-album-info caption">
-                <p>
-                    <a class="album-name" href="album.html">The Colors</a>
-                    <br/>
-                    <a href="index.html">Pablo Picasso</a>
-                    <br/> X songs
-                    <br/>
-                </p>
-            </div>
-        </div>
-        <div class="collection-album-container column fourth">
-            <img src="assets/images/album_covers/01.png" alt="album 01">
-            <div class="collection-album-info caption">
-                <p>
-                    <a href="album.html" class="album-name">The Colors</a>
-                    <br/>
-                    <a href="album.html">Pablo Picasso</a>
-                    <br/> X songs
-                    <br/>
-                </p>
-            </div>
-        </div>
-        <div class="collection-album-container column fourth">
-            <img src="assets/images/album_covers/01.png" alt="album 01">
-            <div class="collection-album-info caption">
-                <p>
-                    <a href="album.html" class="album-name">The Colors</a>
-                    <br/>
-                    <a href="album.html">Pablo Picasso</a>
-                    <br> X songs
-                    <br/>
-                </p>
-            </div>
-        </div>
 
     </section>
+
+    <script src="scripts/collection.js"></script>
+
 
 </body>
 
