--- a/collection.html
+++ b/collection.html
@@ -26,6 +26,7 @@
 
     </section>
 
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="scripts/collection.js"></script>
 
 
